--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,66 +1,46 @@
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
+}
+
 .App {
-  font-family: arial, sans-serif;
-  text-align: center;
-  align-content: center;
-  background-color: black;
-  position: fixed;
-  padding: 0;
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  user-select: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .Header {
-  flex-direction: row;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  font-family: arial, sans-serif;
   background-color: rgb(128, 155, 230);
-  overflow: hidden;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
   color: white;
-  height: 10vh;
-  min-height: 50px;
-  padding: 0;
+  flex-basis: 50px;
   z-index: 10;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.7);
-  user-select: none;
-}
-
-.Content {
-  position: relative;
-  width: 100vw;
-  top: 10vh;
-  height: 90vh;
-  color: white;
 }
 
 .TitleBox {
-  display: flex;
-  flex: 1;
-  padding-left: 0.5em;
-  align-items: center;
-  font-size: 3vw;
+  flex-basis: 70px;
+  max-width: 33vw;
+  font-size: 3em;
   font-weight: bolder;
-}
-.spacer {
-  display: flex;
-  flex: 1;
+  text-align: center;
+  padding: 10px;
 }
 
 .TextBox {
   display: flex;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 40%;
   height: 10vh;
   min-height: 50px;
   width: 20%;
-  border-radius: 50%;
+  border-radius: 30px;
   font-size: max(0, 2.8vh);
   align-items: center;
   justify-content: center;
@@ -74,6 +54,59 @@
 .TextBox:active {
   background-color: rgba(40, 48, 71, 0.226);
 }
+
+button.upload {
+  margin: 5px;
+  flex-basis: 200px;
+  max-width: 33vw;
+  font-size: 22px;
+  background-color: white;
+  border: 5px solid white;
+  border-radius: 5px;
+  color: rgba(128, 155, 230);
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+button.upload:hover {
+  border: 2px solid rgba(128, 155, 230, 0.541);
+}
+button.upload:active {
+  background-color: rgba(40, 48, 71, 0.226);
+}
+
+.Content {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  flex-basis: 90vh;
+}
+
+.Announcements {
+  flex-basis: 10px;
+  font-size: 10px;
+  text-align: center;
+}
+
+.progressbar {
+  position: absolute;
+  width: 100%;
+  height: 12px;
+  z-index: 3;
+}
+
+.PreviewContainer {
+  z-index: 1;
+  height: 100%;
+}
+
+.PreviewImg {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  transition: opacity 0.4s;
+}
+
 .Overlay {
   position: absolute;
   width: 100%;
@@ -98,24 +131,7 @@
   height: 50vh;
   z-index: 10;
 }
-button {
-  flex: 1;
-  height: auto;
-  width: auto;
-  padding: 5;
-  font-size: 22px;
-  background-color: rgba(128, 155, 230, 0.541);
-  border: 5px solid white;
-  color: white;
-  text-transform: uppercase;
-}
-button:hover {
-  background-color: rgba(89, 108, 158, 0.541);
-}
-button:active {
-  border: 2px solid rgba(128, 155, 230, 0.541);
-  background-color: rgba(40, 48, 71, 0.226);
-}
+
 .buttonLevel {
   flex: 1;
   position: relative;
@@ -167,28 +183,7 @@ button:active {
   border: 2px solid rgba(128, 155, 230, 0.541);
   background-color: rgba(40, 48, 71, 0.226);
 }
-.reset {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 5%;
-  right: 2vw;
-  background-color: rgb(128, 155, 230);
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  box-shadow: 2px 2px 3px #999;
-  z-index: 11;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.reset:hover {
-  background-color: rgba(89, 108, 158, 0.877);
-}
-.reset:active {
-  background-color: rgba(40, 48, 71, 0.363);
-}
+
 .point {
   position: fixed;
   width: 10px;
@@ -223,4 +218,26 @@ button:active {
 .line {
   pointer-events: none;
   opacity: 0.5;
+}
+
+.reset {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 1vw;
+  right: 1vw;
+  background-color: rgb(128, 155, 230);
+  color: #fff;
+  border-radius: 50px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 11;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reset:hover {
+  background-color: rgba(89, 108, 158, 0.877);
+}
+.reset:active {
+  background-color: rgba(40, 48, 71, 0.363);
 }
