--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -87,6 +87,7 @@ button.upload:active {
   flex-basis: 10px;
   font-size: 10px;
   text-align: center;
+  z-index: 2;
 }
 
 .progressbar {
@@ -94,6 +95,10 @@ button.upload:active {
   width: 100%;
   height: 12px;
   z-index: 3;
+}
+
+.dropzone {
+  flex: 1;
 }
 
 .PreviewContainer {
@@ -239,6 +244,6 @@ button.upload:active {
 .reset:active {
   background-color: rgba(40, 48, 71, 0.363);
 }
-.logout:hover {
+.click_icon:hover {
   color: rgba(89, 108, 158, 0.877);
 }
