--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -123,16 +123,13 @@ button.upload:active {
   z-index: 3;
 }
 
-.dropzone {
-  flex: 1;
-  align-items: center;
-}
-
 .PreviewContainer {
+  display: flex;
   height: 90vh;
   max-height: 100%;
   max-width: 100%;
   user-select: none;
+  justify-content: center;
 }
 
 .PreviewImg {
