--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -284,3 +284,89 @@ button.upload:active {
   justify-content: center;
   align-items: center;
 }
+.button-previous {
+  position: absolute;
+  left: 2vw;
+  background-color: transparent;
+  border: 2px solid rgb(128, 155, 230);
+  color: white;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 11;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: auto;
+  cursor: pointer;
+  margin: 5px;
+  padding: 2px;
+  user-select: none;
+}
+.button-next {
+  position: absolute;
+  right: 2vw;
+  background-color: transparent;
+  border: 2px solid rgb(128, 155, 230);
+  color: white;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 11;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: auto;
+  cursor: pointer;
+  margin: 5px;
+  padding: 2px;
+  user-select: none;
+}
+.button-next:hover {
+  background-color: rgb(89, 108, 158, 0.25);
+  border: 2px solid rgb(128, 155, 230);
+}
+.button-previous:hover {
+  background-color: rgb(89, 108, 158, 0.25);
+  border: 2px solid rgb(128, 155, 230);
+}
+.button-previous-disabled {
+  position: absolute;
+  left: 2vw;
+  background-color: transparent;
+  border: 2px solid rgb(128, 155, 230);
+  color: white;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 11;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: auto;
+  margin: 5px;
+  padding: 2px;
+  opacity: 0.2;
+  user-select: none;
+  cursor: not-allowed;
+}
+.button-next-disabled {
+  position: absolute;
+  right: 2vw;
+  background-color: transparent;
+  border: 2px solid rgb(128, 155, 230);
+  color: white;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 11;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: auto;
+  margin: 5px;
+  padding: 2px;
+  opacity: 0.2;
+  cursor: not-allowed;
+  user-select: none;
+}
