--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -61,7 +61,7 @@ button.upload {
   margin: 5px;
   flex-basis: 250px;
   max-width: 33vw;
-  font-size: 1.5vw;
+  font-size: 2em;
   background-color: white;
   border: 2px solid white;
   border-radius: 5px;
@@ -81,21 +81,15 @@ button.upload-disabled {
   margin: 5px;
   flex-basis: 250px;
   max-width: 33vw;
-  font-size: auto;
+  font-size: 2em;
   background-color: white;
   border: 2px solid white;
   border-radius: 5px;
   color: rgba(128, 155, 230);
   text-transform: uppercase;
   font-weight: bolder;
-  cursor: pointer;
-  opacity: 0.2;
-}
-button.upload-disabled:hover {
-  border: 2px solid rgba(128, 155, 230, 0.541);
-}
-button.upload-disabled:active {
-  background-color: rgba(40, 48, 71, 0.226);
+  cursor: not-allowed;
+  opacity: 0.5;
 }
 
 .accession {
@@ -132,7 +126,7 @@ button.upload-disabled:active {
 
 .Announcements {
   flex-basis: 16px;
-  font-size: 16px;
+  font-size: min(24pt, 2.5em);
   text-align: center;
   z-index: 2;
 }
@@ -205,7 +199,7 @@ button.upload-disabled:active {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: auto;
+  font-size: 1.5em;
   cursor: pointer;
 }
 .buttonLevelSelected {
@@ -220,7 +214,7 @@ button.upload-disabled:active {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: auto;
+  font-size: 1.5em;
   cursor: pointer;
   font-weight: bolder;
 }
@@ -318,11 +312,12 @@ button.upload-disabled:active {
   text-align: center;
   box-shadow: 2px 2px 3px #999;
   z-index: 11;
-  height: 20px;
+  height: 5vh;
+  width: 5vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: auto;
+  font-size: 1.5em;
   cursor: pointer;
   margin: 5px;
   padding: 2px;
@@ -337,11 +332,12 @@ button.upload-disabled:active {
   text-align: center;
   box-shadow: 2px 2px 3px #999;
   z-index: 11;
-  height: 20px;
+  height: 5vh;
+  width: 5vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: auto;
+  font-size: 1.5em;
   cursor: pointer;
   margin: 5px;
   padding: 2px;
@@ -364,11 +360,12 @@ button.upload-disabled:active {
   text-align: center;
   box-shadow: 2px 2px 3px #999;
   z-index: 11;
-  height: 20px;
+  height: 5vh;
+  width: 5vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: auto;
+  font-size: 1.5em;
   margin: 5px;
   padding: 2px;
   opacity: 0.2;
@@ -384,11 +381,12 @@ button.upload-disabled:active {
   text-align: center;
   box-shadow: 2px 2px 3px #999;
   z-index: 11;
-  height: 20px;
+  height: 5vh;
+  width: 5vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: auto;
+  font-size: 1.5em;
   margin: 5px;
   padding: 2px;
   opacity: 0.2;
