--- a/src/routes/reset/reset.css
+++ b/src/routes/reset/reset.css
@@ -24,6 +24,7 @@
   border: none;
   color: white;
   background-color: rgb(128, 155, 230);
+  cursor: pointer;
 }
 .reset__page div {
   margin-top: 7px;
