--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -34,6 +34,15 @@ body,
   padding: 10px;
 }
 
+.counter {
+  display: flex;
+  flex-basis: 300px;
+  max-width: 40vw;
+  font-size: 2em;
+  align-items: center;
+  text-align: center;
+}
+
 .TextBox {
   display: flex;
   position: absolute;
@@ -58,10 +67,10 @@ body,
 }
 
 button.upload {
-  margin: 5px;
+  height: 80%;
   flex-basis: 250px;
   max-width: 33vw;
-  font-size: 2em;
+  font-size: 1em;
   background-color: white;
   border: 2px solid white;
   border-radius: 5px;
@@ -78,7 +87,7 @@ button.upload:active {
 }
 
 button.upload-disabled {
-  margin: 5px;
+  height: 80%;
   flex-basis: 250px;
   max-width: 33vw;
   font-size: 2em;
