--- a/src/routes/segment/style.css
+++ b/src/routes/segment/style.css
@@ -1,14 +1,20 @@
 .download {
+  margin: 10px;
+}
+.bottom_left {
   position: absolute;
   bottom: 0;
   left: 0;
-  margin: 10px;
   color: white;
   font-size: 25pt;
+  display: flex;
 }
 .download:hover {
   opacity: 0.5;
 }
 .download:active {
   opacity: 0.2;
+}
+.hidden {
+  visibility: hidden;
 }
